kubernetes/apps/tekton-system/tekton-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app tekton-dashboard
  labels:
    app.kubernetes.io/name: *app
spec:
  hostnames:
    - tekton.dcunha.io
  parentRefs:
    - name: internal-gateway
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tekton-dashboard
          port: 9097
